added Css placeholder styling

--- a/index.html
+++ b/index.html
@@ -27,6 +27,29 @@
 
     <main>
         <h1>Welcome to the Home page</h1>
+
+        Jianbing viral lo-fi readymade church-key. Blackbird spyplane sriracha truffaut blue bottle ramps, YOLO yr you probably haven't heard of them before they sold out yuccie asymmetrical pork belly swag ugh. Chicharrones ugh bicycle rights, wolf bruh tousled poke. Succulents DIY chartreuse blackbird spyplane swag bushwick PBR&B butcher yr JOMO yuccie gochujang echo park shaman tonx. Banh mi fashion axe butcher, gentrify pickled adaptogen organic.
+
+        <h2>Biography</h2>
+
+        Skateboard listicle beard authentic single-origin coffee hella YOLO yes plz cray. Viral sus organic tilde, hammock mustache flannel grailed swag jianbing subway tile. Deep v everyday carry yr cupping church-key. Meh mustache sartorial portland narwhal raclette swag. Activated charcoal squid ascot, copper mug gastropub echo park helvetica poutine.
+
+        <h2>Education</h2>
+
+        Poke copper mug enamel pin listicle bodega boys drinking vinegar plaid vegan echo park authentic. Live-edge raw denim lomo, viral celiac hot chicken fashion axe blackbird spyplane tbh la croix kitsch kinfolk franzen cred. Roof party flannel ascot, jianbing taiyaki poutine fanny pack chia semiotics pitchfork thundercats snackwave. Health goth viral normcore praxis kickstarter. Disrupt hell of same, tote bag raclette fanny pack ethical chambray JOMO yr four loko meggings retro. +1 selfies meggings helvetica, portland tumblr la croix tumeric bushwick cardigan gorpcore. Bodega boys jean shorts XOXO, vaporware ennui blackbird spyplane flannel venmo messenger bag plaid health goth leggings pork belly pour-over hell of.
+
+        <h2>Work Experience</h2>
+
+        Ugh gochujang pop-up subway tile, hell of literally slow-carb heirloom tousled blackbird spyplane put a bird on it. XOXO big mood crucifix, mumblecore activated charcoal banh mi kinfolk everyday carry whatever helvetica truffaut. Ramps poutine af vegan thundercats. Plaid cloud bread jawn edison bulb chia try-hard. Ascot air plant humblebrag fingerstache viral photo booth copper mug.
+
+        <h2>Goals</h2>
+
+        Listicle unicorn blog cornhole fingerstache neutra la croix pop-up cronut kinfolk lo-fi photo booth. Knausgaard vegan meh bodega boys shoreditch man braid umami fanny pack DSA blue bottle man bun sriracha echo park mixtape. Keytar disrupt health goth ascot pok pok artisan slow-carb mixtape. Direct trade chicharrones knausgaard lyft, tousled lumbersexual green juice pour-over mixtape aesthetic put a bird on it salvia beard praxis truffaut.
+
+        <h2>Interests</h2>
+
+        Hexagon pinterest enamel pin poke kogi paleo JOMO fingerstache typewriter la croix. +1 stumptown tousled, cupping affogato praxis fingerstache JOMO cold-pressed pickled. Vibecession swag tonx retro shaman air plant 3 wolf moon. Prism ugh fingerstache poke pok pok trust fund blog keytar roof party adaptogen swag.
+
     </main>
 
     <footer>
