wrote bio info in index.html

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="aboutus.html">About</a></li>
             </ul>
         </nav>
 
@@ -28,31 +27,49 @@
     <main>
         <h1>Welcome to the Home page</h1>
 
-        Jianbing viral lo-fi readymade church-key. Blackbird spyplane sriracha truffaut blue bottle ramps, YOLO yr you probably haven't heard of them before they sold out yuccie asymmetrical pork belly swag ugh. Chicharrones ugh bicycle rights, wolf bruh tousled poke. Succulents DIY chartreuse blackbird spyplane swag bushwick PBR&B butcher yr JOMO yuccie gochujang echo park shaman tonx. Banh mi fashion axe butcher, gentrify pickled adaptogen organic.
+        Hello, my name is Emma and welcome to my page. Here you will learn a bit about me.
 
         <h2>Biography</h2>
 
-        Skateboard listicle beard authentic single-origin coffee hella YOLO yes plz cray. Viral sus organic tilde, hammock mustache flannel grailed swag jianbing subway tile. Deep v everyday carry yr cupping church-key. Meh mustache sartorial portland narwhal raclette swag. Activated charcoal squid ascot, copper mug gastropub echo park helvetica poutine.
+        I was born in Kentucky, but moved with my family to Mount Pleasant, Iowa when I was 9. I've lived in Iowa ever
+        since! I graduated from Mount Pleasant Community High School, where I was active in band, choir, and theatre as
+        well as taking several AP classes.
 
         <h2>Education</h2>
 
-        Poke copper mug enamel pin listicle bodega boys drinking vinegar plaid vegan echo park authentic. Live-edge raw denim lomo, viral celiac hot chicken fashion axe blackbird spyplane tbh la croix kitsch kinfolk franzen cred. Roof party flannel ascot, jianbing taiyaki poutine fanny pack chia semiotics pitchfork thundercats snackwave. Health goth viral normcore praxis kickstarter. Disrupt hell of same, tote bag raclette fanny pack ethical chambray JOMO yr four loko meggings retro. +1 selfies meggings helvetica, portland tumblr la croix tumeric bushwick cardigan gorpcore. Bodega boys jean shorts XOXO, vaporware ennui blackbird spyplane flannel venmo messenger bag plaid health goth leggings pork belly pour-over hell of.
+        In 2013, I graduated from Cornell College in Mount Vernon, Iowa. I majored in Biochemistry and Molecular Biology
+        and graduated with a 3.5 GPA. I remained in band and choir throughout choir, and was involved in a sorority,
+        Beta Psi Eta.
 
         <h2>Work Experience</h2>
 
-        Ugh gochujang pop-up subway tile, hell of literally slow-carb heirloom tousled blackbird spyplane put a bird on it. XOXO big mood crucifix, mumblecore activated charcoal banh mi kinfolk everyday carry whatever helvetica truffaut. Ramps poutine af vegan thundercats. Plaid cloud bread jawn edison bulb chia try-hard. Ascot air plant humblebrag fingerstache viral photo booth copper mug.
+        After graduating college, I worked for about two years for Roquette America Inc, where my job was performing
+        quality control testing on high fructose corn syrup and dextrose. After that, I was able to get a job with the
+        University of Iowa Pharmaceuticals. In this role, I performed quality control testing as well as other studies
+        on pharmaceutical drug products. Most of these were in various stages of clinical research. I was in this
+        position for eight years before I changed fields to pursure computer science.
 
         <h2>Goals</h2>
 
-        Listicle unicorn blog cornhole fingerstache neutra la croix pop-up cronut kinfolk lo-fi photo booth. Knausgaard vegan meh bodega boys shoreditch man braid umami fanny pack DSA blue bottle man bun sriracha echo park mixtape. Keytar disrupt health goth ascot pok pok artisan slow-carb mixtape. Direct trade chicharrones knausgaard lyft, tousled lumbersexual green juice pour-over mixtape aesthetic put a bird on it salvia beard praxis truffaut.
+        Since pursuing a career change, my new goal is to complete the coding program throuhg DeltaV Code School, then
+        get a job as a developer. At this stage, I don't know what kind of company I would most like to work for. I
+        enjoy creative pursuits such as music and art, but I also have a great deal of experience in the biological and
+        chemical sciences and would be interested in working for a pharmaceutical company.
 
         <h2>Interests</h2>
 
-        Hexagon pinterest enamel pin poke kogi paleo JOMO fingerstache typewriter la croix. +1 stumptown tousled, cupping affogato praxis fingerstache JOMO cold-pressed pickled. Vibecession swag tonx retro shaman air plant 3 wolf moon. Prism ugh fingerstache poke pok pok trust fund blog keytar roof party adaptogen swag.
+        In my free time, I enjoy making digital art, playing the piano, and I am writing a fantasy novel. I have an
+        amazing husband, Drew, as well as two cats and a dog.
+
+
+        <h2>
+            <button onclick="quizFunc()">Take the Quiz</button>
+        </h2>
 
     </main>
 
     <footer>
+
 
     </footer>
 </body>
