wrote quiz functions

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 
         <h2>
-            <button onclick="quizFunc()">Take the Quiz</button>
+            <button onclick="questionOne()">Take the Quiz</button>
         </h2>
 
     </main>
