corrected questions format

--- a/index.html
+++ b/index.html
@@ -27,39 +27,37 @@
     <main>
         <h1>Welcome to the Home page</h1>
 
-        Hello, my name is Emma and welcome to my page. Here you will learn a bit about me.
+        <p>Hello, my name is Emma and welcome to my page. Here you will learn a bit about me.</p>
 
         <h2>Biography</h2>
 
-        I was born in Kentucky, but moved with my family to Mount Pleasant, Iowa when I was 9. I've lived in Iowa ever
+        <p>I was born in Kentucky, but moved with my family to Mount Pleasant, Iowa when I was 9. I've lived in Iowa ever
         since! I graduated from Mount Pleasant Community High School, where I was active in band, choir, and theatre as
-        well as taking several AP classes.
+        well as taking several AP classes.</p>
 
         <h2>Education</h2>
 
-        In 2013, I graduated from Cornell College in Mount Vernon, Iowa. I majored in Biochemistry and Molecular Biology
-        and graduated with a 3.5 GPA. I remained in band and choir throughout choir, and was involved in a sorority,
-        Beta Psi Eta.
+        <p>In 2013, I graduated from Cornell College in Mount Vernon, Iowa. I majored in Biochemistry and Molecular Biology and graduated with a 3.5 GPA. I remained in band and choir throughout choir, and was involved in a sorority,
+        Beta Psi Eta.</p>
 
         <h2>Work Experience</h2>
 
-        After graduating college, I worked for about two years for Roquette America Inc, where my job was performing
+        <p>After graduating college, I worked for about two years for Roquette America Inc, where my job was performing
         quality control testing on high fructose corn syrup and dextrose. After that, I was able to get a job with the
         University of Iowa Pharmaceuticals. In this role, I performed quality control testing as well as other studies
         on pharmaceutical drug products. Most of these were in various stages of clinical research. I was in this
-        position for eight years before I changed fields to pursure computer science.
+        position for eight years before I changed fields to pursure computer science.</p>
 
         <h2>Goals</h2>
 
-        Since pursuing a career change, my new goal is to complete the coding program throuhg DeltaV Code School, then
-        get a job as a developer. At this stage, I don't know what kind of company I would most like to work for. I
+        <p>Since pursuing a career change, my new goal is to complete the coding program throuhg DeltaV Code School, then get a job as a developer. At this stage, I don't know what kind of company I would most like to work for. I
         enjoy creative pursuits such as music and art, but I also have a great deal of experience in the biological and
-        chemical sciences and would be interested in working for a pharmaceutical company.
+        chemical sciences and would be interested in working for a pharmaceutical company.</p>
 
         <h2>Interests</h2>
 
-        In my free time, I enjoy making digital art, playing the piano, and I am writing a fantasy novel. I have an
-        amazing husband, Drew, as well as two cats and a dog.
+        <p>In my free time, I enjoy making digital art, playing the piano, and I am writing a fantasy novel. I have an
+        amazing husband, Drew, as well as two cats and a dog.</p>
 
 
         <h2>
